--- a/src/app/advisor/advisor.component.html
+++ b/src/app/advisor/advisor.component.html
@@ -15,7 +15,8 @@
           <a
             href="#"
             class="standart-btn"
-            target="blank"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
           ><span>Send a request</span></a>
         </div>
       </div>
