--- a/src/app/fiat/fiat.component.html
+++ b/src/app/fiat/fiat.component.html
@@ -18,7 +18,8 @@
           <a
             href="#"
             class="standart-btn"
-            target="blank"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
           ><span>Open an Account now</span></a>
         </div>
       </div>
@@ -79,7 +80,8 @@
             <a
               href="#"
               class="standart-btn white-variant"
-              target="blank"
+              target="_blank"
+              rel="nofollow noopener noreferrer"
             ><span>Become a VIP</span></a>
           </div>
         </div>
