--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,8 @@
         <div class="social-item">
           <a
             href="https://t.me/exratesme"
-            target="blank"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
           >
             <span class="icon">
               <svg
@@ -33,7 +34,8 @@
         <div class="social-item">
           <a
             href="https://twitter.com/Exrates_Me_"
-            target="blank"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
           >
             <span class="icon">
               <svg
@@ -58,7 +60,8 @@
         <div class="social-item">
           <a
             href="https://www.facebook.com/exrates/"
-            target="blank"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
           >
             <span class="icon">
               <svg
@@ -97,13 +100,15 @@
         <div class="info-page-item">
           <a
             href="https://support.exrates.me/article/fees-pairs"
-            target="blank"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
           ><span>Fees</span></a>
         </div>
         <div class="info-page-item">
           <a
             href="https://developer.exrates.me/"
-            target="blank"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
           ><span>API</span></a>
         </div>
       </div>
@@ -140,7 +145,12 @@
       </div>
       <div class="bottom-social-wr">
         <div class="bottom-social-item">
-          <a href="https://www.tradingview.com/u/ExratesAnalytics/">
+          <a
+            href="https://www.tradingview.com/u/ExratesAnalytics/"
+            target="_blank"
+            title="TradingView"
+            rel="nofollow noopener noreferrer"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="24"
@@ -158,7 +168,9 @@
         <div class="bottom-social-item">
           <a
             href="https://www.youtube.com/channel/UCgd0-iZjMBwtbM72M6ux6fw"
-            target="blank"
+            target="_blank"
+            title="Youtube"
+            rel="nofollow noopener noreferrer"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -188,7 +200,9 @@
         <div class="bottom-social-item">
           <a
             href="https://medium.com/@exrates.me"
-            target="blank"
+            target="_blank"
+            title="Medium"
+            rel="nofollow noopener noreferrer"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -208,7 +222,9 @@
           <a
             href="https://www.facebook.com/exrates/"
             class="fb"
-            target="blank"
+            target="_blank"
+            title="Facebook"
+            rel="nofollow noopener noreferrer"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -227,7 +243,9 @@
         <div class="bottom-social-item">
           <a
             href="https://www.instagram.com/exrates.me/"
-            target="blank"
+            target="_blank"
+            title="Instagram"
+            rel="nofollow noopener noreferrer"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -254,7 +272,9 @@
         <div class="bottom-social-item">
           <a
             href="https://t.me/exratesme"
-            target="blank"
+            target="_blank"
+            title="Telegram"
+            rel="nofollow noopener noreferrer"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
