--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -367,10 +367,17 @@
       </p>
     </div>
     <div class="detail-inf">
-      <p>{{'Detailed description of the conditions is available on the page of our financial partner' | translate}} <a
+      <p>
+        {{'Detailed description of the conditions is available on the page of our financial partner' | translate}}
+        <a
           href="http://fug.sg"
           target="_blank"
-        >FUG</a>.</p>
+          title="FUG"
+          rel="nofollow noopener noreferrer"
+        >
+          FUG
+        </a>.
+      </p>
     </div>
 
   </div>
