--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -207,7 +207,7 @@
 
       <!-- <li class="menu__item" routerLinkActive="menu__link--active">
             <ng-container>
-               <a class="menu__link" href="https://support.exrates.me" target="blank">
+               <a class="menu__link" href="https://support.exrates.me" target="_blank" rel="nofollow noopener noreferrer">
                  <span class="menu__link-text">{{'Support' | translate}}</span>
                </a>
             </ng-container>
@@ -216,7 +216,9 @@
         <a
           class="menu__link"
           href="https://predictionlab.exrates.me"
-          target="blank"
+          target="_blank"
+          rel="nofollow noopener noreferrer"
+          title="Prediction Lab"
         >
           <span class="menu__link-text">{{'Prediction' | translate}}</span>
         </a>
@@ -233,13 +235,15 @@
               <a
                 class="submenu__link"
                 href="https://t.me/exrates_official"
-                target="blank"
+                target="_blank"
+                title="Community World"
+                rel="nofollow noopener noreferrer"
               >
                 <span class="menu__link-text">{{'Community World' | translate}}</span>
               </a>
             </li>
             <!-- <li class="submenu__item">
-              <a class="submenu__link" href="#" target="blank">
+              <a class="submenu__link" href="#" target="_blank" rel="nofollow noopener noreferrer">
                 <span class="menu__link-text">Telegramm</span>
               </a>
             </li> -->
@@ -247,7 +251,9 @@
               <a
                 class="submenu__link"
                 href="https://t.me/exrates_official_cn"
-                target="blank"
+                target="_blank"
+                title="Community China"
+                rel="nofollow noopener noreferrer"
               >
                 <span class="menu__link-text">{{'Community China' | translate}}</span>
               </a>
@@ -256,7 +262,9 @@
               <a
                 class="submenu__link"
                 href="https://t.me/exrates_official_id"
-                target="blank"
+                target="_blank"
+                title="Community Indonesia"
+                rel="nofollow noopener noreferrer"
               >
                 <span class="menu__link-text">{{'Community Indonesia' | translate}}</span>
               </a>
@@ -265,7 +273,9 @@
               <a
                 class="submenu__link"
                 href="https://t.me/exrates_official_ru"
-                target="blank"
+                target="_blank"
+                title="Community Russia"
+                rel="nofollow noopener noreferrer"
               >
                 <span class="menu__link-text"> {{'Community Russia' | translate}}</span>
               </a>
@@ -274,7 +284,9 @@
               <a
                 class="submenu__link"
                 href="https://t.me/exrates_official_ko"
-                target="blank"
+                target="_blank"
+                title="Community Korea"
+                rel="nofollow noopener noreferrer"
               >
                 <span class="menu__link-text">{{'Community Korea' | translate}}</span>
               </a>
@@ -283,7 +295,9 @@
               <a
                 class="submenu__link"
                 href="https://twitter.com/Exrates_Me_"
-                target="blank"
+                target="_blank"
+                title="Twitter"
+                rel="nofollow noopener noreferrer"
               >
                 <span class="menu__link-text">{{'Twitter' | translate}}</span>
               </a>
@@ -602,8 +616,12 @@
           <span class="menu-mob__link-text">{{'Order History' | translate}}</span>
         </a>
 
-        <!-- <a class="menu-mob__link" href="https://about.exrates.me/about-us" target="_blank"><span
-          class="menu-mob__link-text">{{'News' | translate}}</span>
+        <!-- <a
+          class="menu-mob__link"
+          href="https://about.exrates.me/about-us"
+          target="_blank"
+          rel="nofollow noopener noreferrer"
+        ><span class="menu-mob__link-text">{{'News' | translate}}</span>
         </a> -->
 
         <a
@@ -661,6 +679,8 @@
           class="menu-mob__link"
           href="https://support.exrates.me/article/fees-pairs"
           target="_blank"
+          title="Fees"
+          rel="nofollow noopener noreferrer"
         >
           <span class="menu-mob__link-text">{{'Fees' | translate}}</span>
         </a>
