--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -17,7 +17,8 @@
         <a
           href="https://forms.gle/Y18qX3Na3WmWiRnw9"
           class="standart-btn"
-          target="blank"
+          target="_blank"
+          rel="nofollow noopener noreferrer"
         ><span>{{'Apply to launch IEO on X-Platform' | translate}}</span></a>
       </div>
     </div>
