--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -29,8 +29,8 @@
                 <a
                   [href]="item.url"
                   class="rss-lnk"
-                  target="blank"
-                  rel="nofollow"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
                 >
                   {{item.title}}
                   <span>
@@ -51,8 +51,8 @@
                 <a
                   [href]="item.url"
                   class="resourse-lnk"
-                  target="blank"
-                  rel="nofollow"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
                 >
                   <span class="lnk-pic">
                     <svg
