--- a/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
@@ -1,21 +1,30 @@
 <div class="two-fa-s1">
-<h2 class="title modal__title">{{'Two-Factor authentication by Google Authenticator' | translate}}</h2>
-<h3 class="subtitle modal__subtitle">
-  <p>{{'Download Google Authenticator on your mobile device' | translate}}</p>
-</h3>
-<div class="modal__store-row">
-  <a class="modal__store-link"
-     href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2"
-     target="_blank"
-  >
-    <img src="../../../../../assets/img/g-play-black-bg.svg">
-  </a>
-  <a class="modal__store-link"
-     href="https://itunes.apple.com/ua/app/google-authenticator/id388497605?mt=8"
-     target="_blank"
-  >
-    <img src="../../../../../assets/img/app-store-black-bg.svg">
-  </a>
-</div>
-<button class="btn btn--active btn--center " (click)="onNextStep()">{{'To the next step' | translate}}</button>
+  <h2 class="title modal__title">{{'Two-Factor authentication by Google Authenticator' | translate}}</h2>
+  <h3 class="subtitle modal__subtitle">
+    <p>{{'Download Google Authenticator on your mobile device' | translate}}</p>
+  </h3>
+  <div class="modal__store-row">
+    <a
+      class="modal__store-link"
+      href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2"
+      target="_blank"
+      title="play.google.com"
+      rel="nofollow noopener noreferrer"
+    >
+      <img src="../../../../../assets/img/g-play-black-bg.svg">
+    </a>
+    <a
+      class="modal__store-link"
+      href="https://itunes.apple.com/ua/app/google-authenticator/id388497605?mt=8"
+      target="_blank"
+      title="itunes.apple.com"
+      rel="nofollow noopener noreferrer"
+    >
+      <img src="../../../../../assets/img/app-store-black-bg.svg">
+    </a>
+  </div>
+  <button
+    class="btn btn--active btn--center "
+    (click)="onNextStep()"
+  >{{'To the next step' | translate}}</button>
 </div>
