--- a/src/app/static-pages/about-us/about-us.component.html
+++ b/src/app/static-pages/about-us/about-us.component.html
@@ -5,30 +5,48 @@
         {{'About us' | translate}}
       </h1>
     </div>
-    <p class="static-pages__paragraph">{{'Exrates is an actively growing cryptoсurrency exchange, founded in 2016. At the moment more than 600 trading pairs are available on Exrates with a total trading volume of $160 million per day.' | translate}}</p>
+    <p class="static-pages__paragraph">
+      {{'Exrates is an actively growing cryptoсurrency exchange, founded in 2016. At the moment more than 600 trading pairs are available on Exrates with a total trading volume of $160 million per day.' | translate}}
+    </p>
     <p class="static-pages__paragraph">{{'Recently Exrates introduced a new unique design and expanded functionality of the exchange.' | translate}}</p>
-    <p class="static-pages__paragraph">{{'Learn more about our fees ' | translate}} <a [href]="'https://news.exrates.me/article/commissions'" target="_blank">{{'here.' | translate}}</a></p>
+    <p class="static-pages__paragraph">{{'Learn more about our fees ' | translate}} <a
+        [href]="'https://news.exrates.me/article/commissions'"
+        target="_blank"
+        rel="nofollow noopener noreferrer"
+        title="Commissions"
+      >{{'here.' | translate}}</a></p>
     <h6 class="subtitle">{{'Exrates is:' | translate}}</h6>
     <ul class="static-pages__list">
       <li>{{'Minimum commission:' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Transactions have never been easier! Exrates has a minimum commission for trades, deposits and withdrawals;' | translate}}</p>
-      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Transactions have never been easier! Exrates has a minimum commission for trades, deposits and withdrawals;' | translate}}</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'Transactions have never been easier! Exrates has a minimum commission for trades, deposits and withdrawals;' | translate}}</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'Transactions have never been easier! Exrates has a minimum commission for trades, deposits and withdrawals;' | translate}}</p>
 
       <li>{{'Maximum security:' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Our team has foreseen all the errors which may occur while trading, and prevented them. It means that you don’t have to worry about any failures!' | translate}}</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'Our team has foreseen all the errors which may occur while trading, and prevented them. It means that you don’t have to worry about any failures!' | translate}}
+      </p>
 
       <li>{{'Usability:' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'High functionality of the website and a usable price chart – this is what one needs for convenient trading.' | translate}}</p>
-      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Recently Exrates launched a new unique design and enhanced functionality of the exchange.' | translate}}</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'High functionality of the website and a usable price chart – this is what one needs for convenient trading.' | translate}}</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'Recently Exrates launched a new unique design and enhanced functionality of the exchange.' | translate}}</p>
       <p class="static-pages__paragraph static-pages__paragraph--grey">{{'New UI design, bug fixes and faster speed.' | translate}}</p>
       <p class="static-pages__paragraph static-pages__paragraph--grey">{{'More updates are coming soon.' | translate}}</p>
 
       <li>{{'Variety of coins' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey"> {{'Exrates provides an opportunity to trade not only Top-100 coins, but also lots of perspective new altcoins. In total more than 600 trading pairs are now available on our exchange.' | translate}}</p>
-      <p class="static-pages__paragraph static-pages__paragraph--grey"> {{'Moreover, you can also trade, deposit and withdraw fiat currencies.' | translate}}</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'Exrates provides an opportunity to trade not only Top-100 coins, but also lots of perspective new altcoins. In total more than 600 trading pairs are now available on our exchange.' | translate}}
+      </p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey"> {{'Moreover, you can also trade, deposit and withdraw fiat currencies.' | translate}}
+      </p>
 
       <li>{{'24/7 Support' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Our support team is always online and ready to help you! You can contact our support team through the chatbox in the right corner on the bottom of the website.' | translate}}</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'Our support team is always online and ready to help you! You can contact our support team through the chatbox in the right corner on the bottom of the website.' | translate}}
+      </p>
 
       <li>{{'Choose your language' | translate}}</li>
       <p class="static-pages__paragraph static-pages__paragraph--grey">
@@ -55,14 +73,17 @@
 
       <li>{{'Prediction Lab' | translate}}</li>
       <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Exrates launched an experimental' | translate}}
-        <a href="https://predictionlab.exrates.me">{{'prediction service' | translate}}</a> {{'that will hopefully help you navigate in the realities of the crypto market!' | translate}}</p>
-      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Once per month we will release our BTC rate predictions. For each unfulfilled prediction we transfer 0.01 BTC to a special fund, which will be given away randomly to one or several winners at the end of each month, who will be chosen among the members of our ' | translate}}
+        <a href="https://predictionlab.exrates.me">{{'prediction service' | translate}}</a>
+        {{'that will hopefully help you navigate in the realities of the crypto market!' | translate}}</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'Once per month we will release our BTC rate predictions. For each unfulfilled prediction we transfer 0.01 BTC to a special fund, which will be given away randomly to one or several winners at the end of each month, who will be chosen among the members of our ' | translate}}
         <a href="https://t.me/exrates_official">{{'community group.' | translate}}</a></p>
     </ul>
     <p class="static-pages__paragraph"><b>{{'We are working hard to make Exrates.me better!' | translate}}</b></p>
 
     <p class="static-pages__paragraph"><b>{{'We improve our service and looking for new best options for growing up!' | translate}}</b></p>
 
-    <p class="static-pages__paragraph"><b>{{'Less talk, more action! Check the advantages of Exrates yourself: register and start your engaging journey into trading!' | translate}}</b></p>
+    <p class="static-pages__paragraph">
+      <b>{{'Less talk, more action! Check the advantages of Exrates yourself: register and start your engaging journey into trading!' | translate}}</b></p>
   </div>
 </div>
