fix transaction detail

--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -147,17 +147,8 @@
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Transaction hash' | translate}}</div>
-                  <div class="table__details-item-value">{{item.transactionHash}}</div>
+                  <div class="table__details-item-value" style="word-break: break-all;">{{item.transactionHash}}</div>
                 </div>
-                <!-- <div class="table__details-item">
-                  <div class="row">
-                    <button class="btn btn--small btn--empty-blue">I paid</button>
-                    <button
-                      class="btn btn--small btn--empty-blue"
-                      style="margin-left: 20px;"
-                    >{{'Revoke' | translate}}</button>
-                  </div>
-                </div> -->
               </td>
             </tr>
           </ng-container>
