--- a/src/app/funds/balance/ieotable/ieotable.component.html
+++ b/src/app/funds/balance/ieotable/ieotable.component.html
@@ -21,7 +21,7 @@
           <div class="balance__currency-icon">
             <img src="assets/img/currency-icons/citrus.svg">
           </div>
-          <span>{{ieo.currencyDescription}}</span>
+          <span class="descr-txt">{{ieo.currencyDescription}}</span>
         </div>
       </td>
       <td class="table__cell table__cell--tar">
