refactor transaction page

--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container transaction-page">
   <!--transaction-history-mob start-->
   <div
     class="transaction transaction--mob"
