--- a/src/app/funds/transaction-history/transaction-history.component.scss
+++ b/src/app/funds/transaction-history/transaction-history.component.scss
@@ -1,224 +1,26 @@
-::ng-deep .ng-select {
-  .ng-select-container {
-    width: calc(100% - 5px) !important;
-    margin: 0 auto !important;
-    height: 45px !important;
-    background-color: transparent !important;
-    border-color: #94C2FF !important;
-    overflow: unset !important;
-    border-radius: 4px;
-    bottom:1px;
-  }
-  .ng-value-container {
-    height: 100% !important;
-  }
-  .ng-has-value .ng-placeholder{
-    display: block !important;
-  }
-  .ng-placeholder {
-    position: absolute;
-    top: -7px;
-    left: 7px;
-    padding: 0 2px;
-    font-size: 10px;
-    line-height: 12px;
-    z-index: 100;
-    background-color: #191A39;
-    color: #94C2FF !important;
-  }
-  .ng-value{
-    color: #fff !important;
-  }
-  .ng-input {
-    height: 100%;
-    top: 0 !important;
-    input {
-      height: 100%;
-      color: #fff !important;
-      font-size: 14px !important;
-      font-family: inherit;
-    }
-  }
-
-
-  .ng-arrow {
-    border-color: #94C2FF transparent transparent !important;
-  }
-  &.ng-select-opened > .ng-select-container .ng-arrow {
-    border-color: transparent transparent #94C2FF !important;
-  }
-  .ng-dropdown-panel{
-    border-color: #fff;
-    background-color: #fff;
-    margin-bottom: 0 !important;
-  }
-  .ng-option{
-    background-color: transparent !important;
-    color: #191A39;
-    font-weight: 400;
-    &:hover{
-          color: #94C2FF;
-    }
-    &-marked{
-      background-color: rgba(255,255,255,.1) !important;
-    }
-  }
-  .ng-clear-wrapper{
-    width: 10px !important;
-  }
-  .ng-clear{
-    content: '' !important;
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin: 0 auto;
-    font-size: 0 !important;
-    vertical-align: middle;
-    background-image: url("../../../assets/img/close-light-blue.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-}
-
-
-.table__details {
-  height: 0;
-  transition: 0.4s;
-  display: none;
-
-  &-show {
-    display: table-row;
-    height: auto;
-  }
-  td {
-    height: 0;
-    transition: 0.4s;
-  }
-}
-
-.select-input_label {
-  top: -5px;
-  padding: 0 2px;
-  font-size: 10px;
-  line-height: 12px;
-  z-index: 100;
-  background-color: #191A39;
-}
-
-.show-filter-popup {
-  display: block !important;
-}
-
-// pagination styles start
-
-::ng-deep .ng-select {
-  .ng-select-container {
-    margin: 0 auto !important;
-    height: 45px !important;
-    background-color: transparent !important;
-    border-color: #94C2FF !important;
-    overflow: unset !important;
-  }
-  .ng-value-container {
-    height: 100% !important;
-  }
-  .ng-has-value .ng-placeholder{
-    display: block !important;
-  }
-  .ng-placeholder {
-    position: absolute;
-    top: -7px;
-    left: 7px;
-    padding: 0 2px;
-    font-size: 10px;
-    line-height: 12px;
-    z-index: 100;
-    background-color: #191A39;
-    color: #94C2FF !important;
-  }
-  .ng-value{
-    color: #fff !important;
-  }
-  .ng-input {
-    height: 100%;
-    top: 0 !important;
-    input {
-      height: 100%;
-      color: #fff !important;
-      font-size: 14px !important;
-      font-family: inherit;
-    }
-  }
-  .ng-arrow-wrapper{
-    display: none !important;
-  }
-  .ng-arrow {
-    border-color: #94C2FF transparent transparent !important;
-  }
-  .ng-select-opened > .ng-select-container .ng-arrow {
-    border-color: transparent transparent #94C2FF !important;
-  }
-  .ng-dropdown-panel{
-    border-color: #fff;
-    background-color: #fff;
-    margin-bottom: 0 !important;
-    border-radius: 4px;
-  }
-  .ng-option{
-    background-color: transparent !important;
-    // color: #fff !important;
-    &-marked{
-      background-color: rgba(255,255,255,.1) !important;
-    }
-  }
-  .ng-clear-wrapper{
-    width: 10px !important;
-    margin-right: 12px !important;
-  }
-  .ng-clear{
-    content: '' !important;
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin: 0 auto;
-    font-size: 0 !important;
-    vertical-align: middle;
-    background-image: url("../../../assets/img/close-light-blue.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-}
-
-// TEMP STYLE
 ::ng-deep .mydp{
   display: flex !important;
+  @media(max-width: 1199px){
+    margin: 0;
+    width: 100%;
+    padding: 0 12px!important;
+  }
   .selectiongroup{
     margin-left: auto !important;
     .selbtngroup {
       width: auto !important;
     }
   }
-}
-.dark-theme .transaction__filters .pair-popup__input .wrap-input__input .wrap-input__label{
-      top: -5px;
-    padding: 0 2px;
-    font-size: 10px;
-    line-height: 12px;
-}
-
-// TEMP STYLES
-.wrap-input__label {
-  top: 15px;
-  left: 17px;
-  font-size: 14px;
-  &.select-input_label {
-    top: -5px;
-    padding: 0 2px;
-    font-size: 10px;
-    line-height: 12px;
-    z-index: 100;
-    background-color: #191A39;
+  .selector{
+    @media(min-width: 1200px){
+      top: 49px;
+    }
+    top: 38px;
+    left: 0;
+  }
+  button.btnpicker{
+    @media(max-width: 1199px){
+      width: auto;
+    }
   }
 }
