--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -175,7 +175,7 @@
     >
       <div class="filters-popup__header">
         <div class=" filters-popup__title">
-          {{'Transactions filters' | translate}}
+          {{'Transactions Filters' | translate}}
         </div>
         <div
           class="filters-popup__close"
@@ -256,7 +256,7 @@
         <button
           class="btn filters-popup__btn"
           (click)="filterPopupSubmit()"
-        >{{'See results' | translate}}</button>
+        >{{'See Results' | translate}}</button>
       </form>
     </div>
     <!--filter-popup end-->
@@ -270,7 +270,7 @@
   >
     <div class="page-title">
       <h1 class="page-title__text">
-        {{'Transaction history' | translate}}
+        {{'Transaction History' | translate}}
       </h1>
       <button
         class="btn transaction__title-btn"
