balance fix fug tab + refactor mobile ver.

--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -29,7 +29,7 @@
         (click)="onSelectTab.emit(Tab.FIAT)"
         [disabled]="loading"
       >
-        {{'Exchange wallet' | translate}}
+        {{'Exchange Wallet' | translate}}
       </button>
 
       <button
@@ -38,7 +38,7 @@
         (click)="onSelectTab.emit(Tab.QUBERA)"
         [disabled]="loading"
       >
-        {{'Funding wallet' | translate}}
+        {{'Funding Wallet' | translate}}
       </button>
 
       <button
